mongo-express-k8s-stateful-auto-scaling/mongo-express.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express-deployment
  namespace: mongodb
  labels:
    app: mongodb-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-express
  template:
    metadata:
      labels:
        app: mongodb-express
    spec:
      containers:
        - name: mongodb-express
          image: mongo-express
          ports:
            - containerPort: 8081
          
          resources:
            requests:
              memory: "256Mi"  # Adjust the memory request as needed
              cpu: "250m"      # Adjust the CPU request as needed
            limits:
              memory: "512Mi"  # Adjust the memory limit as needed
              cpu: "500m"      # Adjust the CPU limit as needed
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-service
  namespace: mongodb
spec:
  selector:
    app: mongodb-express
  # type: LoadBalancer # Uncomment for external service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      # nodePort: 30000 # Uncomment for external service
